--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,15 @@
 }
 
 .container {
-    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     width: 100%;
     height: 100vh;
     background: rgb(23, 44, 65);
     overflow: hidden;
+    padding: 20px;
 }
 .container .logo{
     position: absolute;
@@ -29,15 +33,17 @@
     color: #74e074;
 }
 
+
 .form-control {
     position: absolute;
+    
     width: 400px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     color: #fff;
+    transition: 0.5s;
+    text-align: center;
     transition: 0.5s
 }
+    
 
 h2 {
     position: relative;
@@ -46,6 +52,7 @@ h2 {
     font-size: 25px;
     text-align: center;
     font-weight: 300;
+    margin-top: 24px;
     margin-bottom: 24px;
     letter-spacing: 0.5px;
 }
@@ -58,7 +65,7 @@ p {
     display: block;
     font-size: 14px;
     font-weight: 200;
-    margin-bottom: 45px;
+    margin-bottom: 30px;
     margin-left: auto;
     margin-right: auto;
     letter-spacing: 0.5px;
@@ -69,7 +76,7 @@ form {
     position: relative;
     width: 250px;
     margin: 0 auto;
-    margin-bottom: 5rem;
+/*    margin-bottom: 5rem;*/
 }
 
 form .input-control {
@@ -88,7 +95,18 @@ form .input-control input {
     background: rgb(27, 79, 88);
     color: #fff;
 }
-
+select{
+    position: relative;
+    width: 100%;
+    height: 45px;
+    border-radius: 12px;
+    margin-bottom: 20px;
+    outline: none;
+    border: none;
+    padding: 10px;
+    background: rgb(27, 79, 88);
+    color: #fff;
+}
 
 form .input-control input::placeholder {
     color: #f1f1f1;
